--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</title>
 	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
-	<link rel="shortcut icon" type="image/x-icon" href="C:\Users\Hp\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\FeviconR2.png">
+	<link rel="shortcut icon" type="image/x-icon" href="/-Personal-Portfolio/images/FeviconR2.png">
 	<link rel="stylesheet" type="text/css" href="/-Personal-Portfolio/style.css">
 
 	
