--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 					
 					<li>
 					<a href="https://www.linkedin.com/in/ritik-shrivastava-6528751ab/" target="_blank">
-						<img src="C:\Users\Hp\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\linkedin-256.png" height="25px">
+						<img src="/-Personal-Portfolio/images/linkedin-256.png" height="25px">
 					</a>
 				</li>
 
 
 				<li>
 					<a href="https://www.facebook.com/ritik.shrivastava.79462" target="_blank">
-						<img src="C:\Users\Hp\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\facebook-256.png" height="25px">
+						<img src="/-Personal-Portfolio/images/facebook-256.png" height="25px">
 					</a>
 				</li>
 
@@ -71,25 +71,25 @@
 
 				<li>
 					<a href="https://www.instagram.com/mr_ritik.45/" target="_blank">
-						<img src="C:\Users\Hp\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\instagram-256.png" height="25px">
+						<img src=/-Personal-Portfolio/images/instagram-256.png" height="25px">
 					</a>
 				</li>
 
 				<li>
 					<a href="https://www.hackerrank.com/ritikshrivastav3" target="_blank">
-						<img src="C:\Users\Hp\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\Hackerrank.png" height="30px">
+						<img src="/-Personal-Portfolio/images/Hackerrank.png" height="30px">
 					</a>
 				</li>
 
 				<li>
 					<a href="https://auth.geeksforgeeks.org/user/ritikshrivastava6645/practice/" target="_blank">
-						<img src="C:\Users\Hp\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\gfg2.png"height="25px">
+						<img src="/-Personal-Portfolio/images/gfg2.png"height="25px">
 					</a>
 				</li>
 
 				<li>
 					<a href="https://www.codechef.com/users/ritik1232" target="_blank">
-						<img src="C:\Users\Hp\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\CodeChef (@codechef) (1).jfif" height="25px">
+						<img src="/-Personal-Portfolio/images/CodeChef (@codechef) (1).jfif" height="25px">
 					</a>
 				</li>
 
@@ -102,7 +102,7 @@
 	<main>
 		<section id = "about">
 			<div id="my-image">
-				<img src="C:\Users\Hp\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\myPhoto.png" height="100px">
+				<img src="/-Personal-Portfolio/images/myPhoto.png" height="100px">
 			</div>
 			<p class ="about-para">
 				<span class="text-highlight"> Ritik Shrivastava </span> is a enthusiastic student pursuing his graduation from <a href="https://www.rgpv.ac.in/"> <span class="text-highlight"> RGPV University</span></a> in department of <span class="text-highlight"> Computer Science and Engineering </span>
