--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			
 			<h1 class="section-heading mb75px">
 				<span>
-					<img id ="skills-image-margin" src="C:\Users\Hp\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\SkillsImage2.png" height="35px">
+					<img id ="skills-image-margin" src="/-Personal-Portfolio/images/SkillsImage2.png" height="35px">
 				</span>
 				<span> SKILLS </span>
 			</h1>
