--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 				<li>
 					<a href="https://www.instagram.com/mr_ritik.45/" target="_blank">
-						<img src=/-Personal-Portfolio/images/instagram-256.png" height="25px">
+						<img src="/-Personal-Portfolio/images/instagram-256.png" height="25px">
 					</a>
 				</li>
 
