--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 					
 					<li>
 					<a href="https://www.linkedin.com/in/ritik-shrivastava-6528751ab/" target="_blank">
-						<!-- <img src="C:\Users\Hp\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\linkedin-256.png" height="38px" width="38px"> -->
-						<img src="C:\Users\HP\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\Final_linkedin.png">
+						<img src="/-Personal-Portfolio/images/Final_linkedin.png" height="30px">
 
 					</a>
 				</li>
@@ -66,32 +65,32 @@
 
 				<li>
 					<a href="https://www.hackerrank.com/ritikshrivastav3" target="_blank">
-						<img src="C:\Users\Hp\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\Hackerrank.png" height="30px">
+						<img src="/-Personal-Portfolio/images/Hackerrank.png" height="30px">
 					</a>
 				</li>
 
 				<li>
 					<a href="https://auth.geeksforgeeks.org/user/ritikshrivastava6645/practice/" target="_blank">
-						<img src="C:\Users\Hp\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\gfg2.png"height="25px">
+						<img src="/-Personal-Portfolio/images/gfg2.png" height="30px">
 					</a>
 				</li>
 
 				<li>
 					<a href="https://leetcode.com/ritik1232/" target="_blank">
-						<img src="C:\Users\HP\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\leetcode.png" height="25px">
+						<img src="/-Personal-Portfolio/images/leetcode.png" height="30px">
 					</a>
 				</li>
 
 
 				<li>
 					<a href="https://www.codechef.com/users/ritik1232" target="_blank">
-						<img src="C:\Users\Hp\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\CodeChef (@codechef) (1).jfif" height="25px">
+						<img src="/-Personal-Portfolio/images/CodeChef (@codechef) (1).jfif" height="30px">
 					</a>
 				</li>
 
 				<li>
 					<a href="https://github.com/ritik8982" target="_blank">
-						<img src="C:\Users\HP\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\Github.png" height="25px">
+						<img src="/-Personal-Portfolio/images/Github.png" height="30px">
 					</a>
 				</li>
 
@@ -104,7 +103,7 @@
 	<main>
 		<section id = "about">
 			<div id="my-image">
-				<img src="C:\Users\Hp\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\myPhoto.png" height="100px">
+				<img src="/-Personal-Portfolio/images/myPhoto.png" height="100px">
 			</div>
 			<p class ="about-para">
 				<span class="text-highlight"> Ritik Shrivastava </span> is a enthusiastic student pursuing his graduation from <a href="https://www.rgpv.ac.in/"> <span class="text-highlight"> RGPV University</span></a> in department of <span class="text-highlight"> Computer Science and Engineering </span>
@@ -220,8 +219,7 @@
 					<div class="timeline-box">
 
 						<div class="timeline-logo">
-							<img src="C:\Users\HP\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\RSMHSS.png" height="80px" width="80px">
-						</div>
+							<img src="/-Personal-Portfolio/images/RSMHSS.png" hheight="80px" width="80px">
 						<h3 class="cls-font">
 							9th - 10th
 						</h3>
@@ -238,7 +236,7 @@
 					<div class="timeline-box">
 
 						<div class="timeline-logo">
-							<img src="C:\Users\HP\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\RSMHSS.png" height="80px" width="80px">
+							<img src="/-Personal-Portfolio/images/RSMHSS.png" height="80px" width="80px">
 						</div>
 						<h3 class="cls-font">
 							11th - 12th
@@ -256,7 +254,7 @@
 					<div class="timeline-box">
 
 						<div class="timeline-logo">
-							<img src="C:\Users\HP\Desktop\CODES\CODING NINJAS\WEB DEVELOPMENT\RESUME PROJECT\images\University.png" height="80px" width="80px">
+							<img src="/-Personal-Portfolio/images/University.png" height="80px" width="80px">
 						</div>
 						<h3 class="cls-font">
 							B.Tech
@@ -273,7 +271,8 @@
 
 					<div class="timeline-divider">
 						<div class="timeline-traveller">
-							<img id ="skills-image-margin" src="file:///C:/Users/HP/Downloads/plane-solid.svg" height="20px">
+							<img id ="skills-image-margin" src="file:///C:/Users/HP/Downloads/" height="20px">
+							<img src="/-Personal-Portfolio/images/plane-solid.svg" height="20px">
 							
 						</div>
 					</div>
