--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <div id="timeline-divider">
                     <div class="timeline-traveller">
                         <div>
-                           <i class="fa-solid fa-plane"></i>
+                           <i class="fas fa-car-side"></i>
                         </div>
                     </div>
                 </div>
