--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 					 </div>
 					<div class="my-details-container-info">
 					<i class="fas fa-mobile-alt"></i>
-					<span> &nbsp; 8982601013 </span>
+					<span> &nbsp; XXXXXXXXXX </span>
 					 </div>
 					<div class="my-details-container-info">
 						<i class="far fa-envelope"></i>
