--- a/index.html
+++ b/index.html
@@ -182,14 +182,14 @@
 							</div>
 					</div>
 
-					<div class="skill-progress">
+<!-- 					<div class="skill-progress">
 							<div class="twenty-precent mb-js">
 								<div class="skill-name">
 									<span>Javascript</span>
 								</div>
 								
 							</div>
-					</div>
+					</div> -->
 
 					<div class="skill-progress">
 							<div class="seventy-five-precent mb-sql">
